# ToyExperimentHelper

./: CMakeLists.txt  Contribute.md  README.md  main.cpp
Examples/: CMakeLists.txt
Examples/include/: ExampleExperiment.hpp  ExampleModule.hpp  ExampleParameters.hpp
Examples/src/: ExampleExperiment.cpp  ExampleModule.cpp  ExampleParameters.cpp
include/: FitParameters.hpp  Parameter.hpp  ToyExperiment.hpp  ToyModule.hpp  funcs.hh
src/: FitParameters.cpp  FitParams.cpp  Parameter.cpp  ToyExperiment.cpp  ToyModule.cpp  funcs.cpp
tests/: CreateClass.cpp
